<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/pdf_header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlPdfOption"
        android:layout_below="@+id/header"
        android:backgroundTint="@color/colorWhite"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginTop="10dp"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/llHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:visibility="gone"
                android:weightSum="3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10dp" android:textColor="@color/gray"
                    android:text="@string/headerleft"
                    android:textAlignment="textStart">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:textColor="@color/gray"
                    android:text="@string/headerCenter"    android:textSize="10dp"
                    android:textAlignment="center">

                </TextView>

                <TextView
                    android:id="@+id/tvHeaderRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/gray"
                    android:text="@string/headerRight"    android:textSize="10dp"
                    android:textAlignment="textEnd">

                </TextView>
            </LinearLayout>

            <ImageView
                android:layout_below="@+id/llHeader"
                android:id="@+id/ivHighlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:id="@+id/llFooter"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:textColor="@color/gray"
                    android:text="@string/Footerleft"    android:textSize="10dp"
                    android:textAlignment="textStart"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:textColor="@color/gray"
                    android:text="@string/FooterCenter"    android:textSize="10dp"
                    android:textAlignment="center"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:textColor="@color/gray"
                    android:text="@string/FooterRight"    android:textSize="10dp"
                    android:textAlignment="textEnd">

                </TextView>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/rlPdfOption"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_voilet"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@color/dark_voilet"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/my_reference"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Save"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/llBookDetails"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_toRightOf="@+id/ivShare"
            android:layout_weight="1"
            android:background="@color/dark_voilet"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/book_close"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Book Info"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/viewQuickLInk"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/llQuickLink"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@color/dark_voilet"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@mipmap/link"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/tvQuickLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Quick Link"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/llNext"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:background="@color/dark_voilet"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_chevron_right_24"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Next"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>